examples/v1.0.0/commons/describe/ts/invalid/describe.receipt.invalid.2.ts
// INVALID describe.receipt #2 — missing result when status=success

export const describeReceiptInvalid2: any = {
  x402: {
    verb: "describe",
    version: "1.0.0",
    request_id: "req-describe-2025-11-19-0005"
  },
  trace: {
    trace_id: "trace-describe-0005"
  },
  status: "success"
};
